remove needless comma

--- a/views/delete.erb
+++ b/views/delete.erb
@@ -11,5 +11,5 @@
       <td><span><%= @todo.deadline %></span></td>
     </tr>
   </table>
-  <input type='submit' name='delete' value='削除', class='btn btn-danger'>
+  <input type='submit' name='delete' value='削除' class='btn btn-danger'>
 </form>
